Move to a repo->user based watchlist
I think this is better way to do it.

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -1,5 +1,9 @@
-[components/canvas/webgl_paint_task.rs]
-watchers = ecoal95
+[servo/servo]
+ecoal95 = components/script/dom/webgl components/canvas/webgl_paint_task.rs
+bholley = components/style/
 
-[components/script/dom/webgl]
-watchers = ecoal95
+[servo/highfive]
+jdm =
+
+[servo/highfive-test]
+test_user = watched/dir/ not-watched/dir/watched-file.rs
