--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -1,5 +1,5 @@
 [servo/servo]
-ecoal95 = components/script/dom/webgl components/canvas/webgl_paint_task.rs
+emilio = components/script/dom/webgl components/canvas/webgl_paint_task.rs
 bholley = components/style/
 
 [servo/highfive]
