--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -1,6 +1,7 @@
 [servo/servo]
 emilio = components/script/dom/webgl components/canvas/webgl_paint_task.rs
 bholley = components/style/
+SimonSapin = components/style/
 
 [servo/highfive]
 jdm =
