Add 'waffles' to watchers for python/

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -2,6 +2,7 @@
 emilio = components/script/dom/webgl components/canvas/webgl_paint_task.rs
 bholley = components/style/
 SimonSapin = components/style/
+Wafflespeanut = python/
 
 [servo/highfive]
 jdm =
