--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -3,6 +3,7 @@ emilio = components/script/dom/webgl components/canvas/webgl_paint_task.rs
 bholley = components/style/
 SimonSapin = components/style/
 Wafflespeanut = python/
+jgraham = components/webdriver_server/ tests/wpt/
 
 [servo/highfive]
 jdm =
