Update watchers.ini for KiChjang

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -4,6 +4,7 @@ bholley = components/style/
 SimonSapin = components/style/
 Wafflespeanut = python/
 jgraham = components/webdriver_server/ tests/wpt/
+KiChjang = components/script components/script_traits components/net components/net_traits
 
 [servo/highfive]
 jdm =
