Add tests for file path exclusions in watcher handler. Issue #76

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -10,4 +10,4 @@ KiChjang = components/script components/script_traits components/net components/
 jdm =
 
 [servo/highfive-test]
-test_user = watched/dir/ not-watched/dir/watched-file.rs
+test_user = watched/dir/ not-watched/dir/watched-file.rs blacklisted/dir/watched-file.rs -blacklisted/dir/ -watched/dir/blacklisted-file.rs
