Make jgraham's life easier

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -2,7 +2,7 @@
 emilio = components/script/dom/webgl components/canvas/webgl_paint_task.rs
 bholley = components/style/
 Wafflespeanut = python/
-jgraham = components/webdriver_server/ tests/wpt/
+jgraham = components/webdriver_server/ tests/wpt/ -tests/wpt/mozilla -tests/wpt/metadata -tests/wpt/web-platform-tests -tests/wpt/metadata-css -tests/wpt/css-tests
 KiChjang = components/script components/script_traits components/net components/net_traits
 
 [servo/highfive]
