Add watch on CI scripts for aneeshusa

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -4,6 +4,7 @@ bholley = components/style/
 Wafflespeanut = python/
 jgraham = components/webdriver_server/ tests/wpt/ -tests/wpt/mozilla -tests/wpt/metadata -tests/wpt/web-platform-tests -tests/wpt/metadata-css -tests/wpt/css-tests
 KiChjang = components/script components/script_traits components/net components/net_traits
+aneeshusa = etc/ci/
 
 [servo/highfive]
 jdm =
