Add flake8 and clean up formatting
Fix all the warnings from flake8, and add it to the Travis test suite.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "2.7"
-script: python test.py
+script:
+  - flake8 .
+  - python test.py
 notifications:
   webhooks: http://build.servo.org:54856/travis
