--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -5,6 +5,7 @@ Wafflespeanut = python/
 jgraham = components/webdriver_server/ tests/wpt/ -tests/wpt/mozilla -tests/wpt/metadata -tests/wpt/web-platform-tests -tests/wpt/metadata-css -tests/wpt/css-tests
 KiChjang = components/script components/script_traits components/net components/net_traits
 aneeshusa = etc/ci/
+fitzgen = components/profile components/profile_traits components/devtools components/devtools_traits
 
 [servo/highfive]
 jdm =
