Added watcher for asajeffrey.

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -6,6 +6,7 @@ jgraham = components/webdriver_server/ tests/wpt/ -tests/wpt/mozilla -tests/wpt/
 KiChjang = components/script components/script_traits components/net components/net_traits
 aneeshusa = etc/ci/
 fitzgen = components/profile components/profile_traits components/devtools components/devtools_traits
+asajeffrey = components/constellation components/webdriver_server
 
 [servo/highfive]
 jdm =
