Add waffles to label watchers

--- a/handlers/label_watchers/watchers.ini
+++ b/handlers/label_watchers/watchers.ini
@@ -1,6 +1,7 @@
 [servo/servo]
 aneeshusa = A-infrastructure
 fitzgen = A-devtools A-profiling
+wafflespeanut = A-mach L-python
 
 [servo/highfive]
 jdm = enhancement
