Remove mbrubeck from random rotation (#146); r=Ms2ger
Also avoid using real collaborator data in tests.

--- a/collaborators.ini
+++ b/collaborators.ini
@@ -7,7 +7,6 @@ jdm =
 KiChjang =
 larsbergstrom =
 Manishearth =
-mbrubeck =
 metajack =
 Ms2ger =
 nox =
@@ -24,3 +23,7 @@ aneeshusa =
 
 [servo/test-repo]
 highfive =
+
+[servo/test-repo2]
+highfive =
+highfive2 =
