Watch style and layout

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -1,5 +1,5 @@
 [servo/servo]
-emilio = components/script/dom/webgl components/canvas/webgl_paint_task.rs
+emilio = components/script/dom/webgl components/canvas/webgl ports/geckolib components/style/ components/layout/
 bholley = components/style/
 Wafflespeanut = python/
 jgraham = components/webdriver_server/ tests/wpt/ -tests/wpt/mozilla -tests/wpt/metadata -tests/wpt/web-platform-tests -tests/wpt/metadata-css -tests/wpt/css-tests
