Add ipc-channel reviewers.

--- a/collaborators.ini
+++ b/collaborators.ini
@@ -14,6 +14,13 @@ pcwalton =
 SimonSapin =
 Wafflespeanut =
 
+[servo/ipc-channel]
+emilio =
+jdm =
+pcwalton =
+antrik =
+metajack =
+
 [servo/highfive]
 jdm =
 Wafflespeanut =
