Let me watch stylo issues.
I don't want things like https://github.com/servo/servo/issues/15729 (where someone volunteered and nobody replied for 12 days) to happen again, so I plan to instruct people to file stylo mentored issues under the `A-stylo` label, and I'll watch them to (try to) prevent this.

--- a/handlers/label_watchers/watchers.ini
+++ b/handlers/label_watchers/watchers.ini
@@ -2,6 +2,7 @@
 aneeshusa = A-infrastructure
 fitzgen = A-devtools A-profiling
 wafflespeanut = A-mach L-python
+emilio = A-stylo
 
 [servo/highfive]
 jdm = enhancement
