add me to watching things; alphebetize lists
Introducing myself mysteriously broke a test which passed before, so I changed
the test to reflect the new version of reality with the current watcher lists.

--- a/handlers/label_watchers/watchers.ini
+++ b/handlers/label_watchers/watchers.ini
@@ -1,8 +1,12 @@
 [servo/servo]
 aneeshusa = A-infrastructure
+edunham = A-infrastructure A-mach A-servo.org
+emilio = A-stylo
 fitzgen = A-devtools A-profiling
 wafflespeanut = A-mach L-python
-emilio = A-stylo
 
 [servo/highfive]
 jdm = enhancement
+
+[servo/saltfs]
+edunham = S-awaiting-answer S-needs-deploy
