Add edunham to watchers.

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -7,6 +7,7 @@ KiChjang = components/script components/script_traits components/net components/
 aneeshusa = etc/ci/
 fitzgen = components/script components/script_traits components/profile components/profile_traits components/devtools components/devtools_traits components/debugger
 asajeffrey = components/constellation components/webdriver_server
+edunham = servo-tidy.toml appveyor.yml dependencyci.yml .travis.yml python/tidy
 
 [servo/highfive]
 jdm =
