--- a/handlers/label_watchers/watchers.ini
+++ b/handlers/label_watchers/watchers.ini
@@ -4,6 +4,9 @@ fitzgen = A-devtools A-profiling
 wafflespeanut = A-mach L-python
 emilio = A-stylo
 
+[servo/saltfs]
+edunham = S-awaiting-answer S-needs-deploy
+
 [servo/highfive]
 jdm = enhancement
 
