Add rillian to watchers.
Tracking minimum rust version bumps.

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -8,6 +8,10 @@ aneeshusa = etc/ci/
 fitzgen = components/script components/script_traits components/profile components/profile_traits components/devtools components/devtools_traits components/debugger
 asajeffrey = components/constellation components/webdriver_server
 edunham = servo-tidy.toml appveyor.yml dependencyci.yml .travis.yml python/tidy
+rillian = rust-stable-version
+
+[servo/webrender]
+rillian = .travis.yml
 
 [servo/highfive]
 jdm =
