Add canaltinova to watchers list

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -9,6 +9,7 @@ fitzgen = components/script components/script_traits components/profile componen
 asajeffrey = components/constellation components/webdriver_server
 edunham = servo-tidy.toml appveyor.yml dependencyci.yml .travis.yml python/tidy
 rillian = rust-stable-version
+canaltinova = components/style/
 
 [servo/webrender]
 rillian = .travis.yml
