--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -10,6 +10,7 @@ asajeffrey = components/constellation components/webdriver_server
 edunham = servo-tidy.toml appveyor.yml dependencyci.yml .travis.yml python/tidy
 rillian = rust-stable-version
 canaltinova = components/style/
+paulrouget = components/compositing components/constellation components/servo ports/servo ports/glutin
 
 [servo/webrender]
 rillian = .travis.yml
