--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -1,6 +1,6 @@
 [servo/servo]
 emilio = components/script/dom/webgl components/canvas/webgl ports/geckolib components/style/ components/layout/
-bholley = components/style/
+bholley = components/style/ ports/geckolib/ components/selectors/ components/servo_arc/
 Wafflespeanut = python/
 jgraham = components/webdriver_server/ tests/wpt/ -tests/wpt/mozilla -tests/wpt/metadata -tests/wpt/web-platform-tests -tests/wpt/metadata-css -tests/wpt/css-tests
 KiChjang = components/script components/script_traits components/net components/net_traits
