Add cbrewster as a watcher

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -11,6 +11,7 @@ edunham = servo-tidy.toml appveyor.yml dependencyci.yml .travis.yml python/tidy
 rillian = rust-stable-version
 canaltinova = components/style/
 paulrouget = components/compositing components/constellation components/servo ports/servo ports/glutin
+cbrewster = components/constellation
 
 [servo/webrender]
 rillian = .travis.yml
