Add components/script to asajeffrey's watch list.

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -6,7 +6,7 @@ jgraham = components/webdriver_server/ tests/wpt/ -tests/wpt/mozilla -tests/wpt/
 KiChjang = components/script components/script_traits components/net components/net_traits
 aneeshusa = etc/ci/
 fitzgen = components/script components/script_traits components/profile components/profile_traits components/devtools components/devtools_traits components/debugger
-asajeffrey = components/constellation components/webdriver_server
+asajeffrey = components/constellation components/script components/webdriver_server
 edunham = servo-tidy.toml appveyor.yml dependencyci.yml .travis.yml python/tidy
 rillian = rust-stable-version
 canaltinova = components/style/
