Add geckolib-rust-toolchain to rillian's watch list.

--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -8,7 +8,7 @@ aneeshusa = etc/ci/
 fitzgen = components/script components/script_traits components/profile components/profile_traits components/devtools components/devtools_traits components/debugger
 asajeffrey = components/constellation components/script components/webdriver_server
 edunham = servo-tidy.toml appveyor.yml dependencyci.yml .travis.yml python/tidy
-rillian = rust-stable-version
+rillian = rust-stable-version geckolib-rust-toolchain
 canaltinova = components/style/
 paulrouget = components/compositing components/constellation components/servo ports/servo ports/glutin
 cbrewster = components/constellation
