--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -20,4 +20,4 @@ rillian = .travis.yml
 jdm =
 
 [servo/highfive-test]
-test_user = watched/dir/ not-watched/dir/watched-file.rs blacklisted/dir/watched-file.rs -blacklisted/dir/ -watched/dir/blacklisted-file.rs
+test_user = watched/dir/* not-watched/dir/watched-file.rs blacklisted/dir/watched-file.rs -blacklisted/dir/* -watched/dir/blacklisted-file.rs not-watched/dir/*.txt -not-watched/dir/exclude.txt
