Update reviewers to reflect reality

--- a/collaborators.ini
+++ b/collaborators.ini
@@ -3,7 +3,7 @@ asajeffrey =
 avadacatavra =
 emilio =
 jdm =
-glennw =
+gw3583 =
 Manishearth =
 mbrubeck =
 nox =
@@ -13,7 +13,7 @@ pcwalton =
 emilio =
 pcwalton =
 antrik =
-metajack =
+jdm =
 
 [servo/highfive]
 jdm =
