Make reviewer list reflect reality.

--- a/collaborators.ini
+++ b/collaborators.ini
@@ -3,11 +3,11 @@ asajeffrey =
 avadacatavra =
 emilio =
 jdm =
-gw3583 =
 Manishearth =
-mbrubeck =
 nox =
 paulrouget =
+SimonSapin =
+ferjm =
 
 [servo/ipc-channel]
 emilio =
