--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -1,13 +1,10 @@
 [servo/servo]
-emilio = components/script/dom/webgl/* components/canvas/webgl/* ports/geckolib/* components/style/* components/layout/*
+emilio = components/style/* components/layout/*
 Wafflespeanut = python/*
-jgraham = components/webdriver_server/* tests/wpt/* -test/wpt/webgl/* -tests/wpt/mozilla/* -tests/wpt/metadata/* -tests/wpt/web-platform-tests/* -tests/wpt/metadata-css/* -tests/wpt/css-tests/*
+jgraham = components/webdriver_server/* tests/wpt/* -test/wpt/webgl/* -tests/wpt/mozilla/* -tests/wpt/metadata/* -tests/wpt/metadata-layout-2020/* -tests/wpt/web-platform-tests/* -tests/wpt/metadata-css/* -tests/wpt/css-tests/*
 KiChjang = components/script/* components/script_traits/* components/net/* components/net_traits/*
 asajeffrey = components/constellation/* components/script/* components/webdriver_server/*
 cbrewster = components/constellation/*
-
-[servo/webrender]
-rillian = .travis.yml
 
 [servo/highfive]
 jdm =
