--- a/handlers/watchers/watchers.ini
+++ b/handlers/watchers/watchers.ini
@@ -1,7 +1,7 @@
 [servo/servo]
 emilio = components/style/* components/layout/*
 Wafflespeanut = python/*
-jgraham = components/webdriver_server/* tests/wpt/* -test/wpt/webgl/* -tests/wpt/mozilla/* -tests/wpt/metadata/* -tests/wpt/metadata-layout-2020/* -tests/wpt/web-platform-tests/* -tests/wpt/metadata-css/* -tests/wpt/css-tests/*
+jgraham = components/webdriver_server/* tests/wpt/* -tests/wpt/webgl/* -tests/wpt/mozilla/* -tests/wpt/metadata/* -tests/wpt/metadata-layout-2020/* -tests/wpt/web-platform-tests/* -tests/wpt/metadata-css/* -tests/wpt/css-tests/*
 KiChjang = components/script/* components/script_traits/* components/net/* components/net_traits/*
 asajeffrey = components/constellation/* components/script/* components/webdriver_server/*
 cbrewster = components/constellation/*
