Don't assign reviewers in servo

--- a/collaborators.ini
+++ b/collaborators.ini
@@ -1,4 +1,4 @@
-[servo/servo]
+[servo/servo-ignored]
 asajeffrey =
 jdm =
 Manishearth =
@@ -8,8 +8,6 @@ SimonSapin =
 
 [servo/ipc-channel]
 emilio =
-pcwalton =
-antrik =
 jdm =
 
 [servo/highfive]
