--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v5
       - name: Setup Python
         uses: actions/setup-python@v6
-      - name: Install flake8
-        run: pip install flake8
+      - name: Install requirements
+        run: pip install flake8 legacy-cgi
       - name: flake8
         run: flake8 .
       - name: tests
