--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Main
 
 on:
   push:
-    branches: ["main"]
+    branches: ["master"]
   pull_request:
     types: ['opened', 'synchronize']
     branches: ["**"]
